# RayTracer

./: CMakeLists.txt  input_format.json  null  output.ppm  report.docx  test.ppm
cameras/: Pinhole.cpp  Pinhole.h  ThinLens.cpp  ThinLens.h
core/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  RayHitStructs.h  RayTracer.cpp  RayTracer.h  Sampler.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h
dof/: output_j100.ppm  output_j121.ppm  output_j144.ppm  output_j16.ppm  output_j169.ppm  output_j196.ppm  output_j225.ppm  output_j25.ppm  output_j256.ppm  output_j36.ppm  output_j4.ppm  output_j4096.ppm  output_j49.ppm  output_j64.ppm  output_j81.ppm  output_j9.ppm  output_r100.ppm  output_r121.ppm  output_r144.ppm  output_r16.ppm  output_r169.ppm  output_r196.ppm  output_r225.ppm  output_r25.ppm  output_r256.ppm  output_r36.ppm  output_r4.ppm  output_r49.ppm  output_r64.ppm  output_r81.ppm  output_r9.ppm
examples/: cube.ply  dof_test.json  example copy 2.json  example copy.json  example.json  example_primitives.json  features_example.json  monkey.ply  monkey_bvh_test.json  softshadow_test.json  uvtest.ppm
lights/: AreaLight.cpp  AreaLight.h  PointLight.cpp  PointLight.h
main/: main.cpp
materials/: BlinnPhong.cpp  BlinnPhong.h
math/: geometry.h
parsers/: PLYReader.h  PPMReader.h  PPMTexture.h  PPMWriter.h
samplers/: Jittered.cpp  Jittered.h  PassThrough.h  Random.cpp  Random.h
shapes/: BVH.cpp  BVH.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  TriMesh.cpp  TriMesh.h  Triangle.cpp  Triangle.h
softshadow/: output_j100.ppm  output_j16.ppm  (+29 more)
